arc: Fix crash on Arc window close.

BUG=638261
BUG=b/30817552
TEST=Manually on device. No more crashes are observed.

Review-Url: https://codereview.chromium.org/2251493002
Cr-Commit-Position: refs/heads/master@{#412390}

Former-commit-id: 323b4a4792b0c6eb7e51d2aee66773378229e486